# mc-library

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  roadmap.md
.codex/skills/mc-agent-surface/: SKILL.md
.codex/skills/mc-architecture-guardian/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: README.md  improvement-plan.md  latest-results.json  reference-fixtures.json  release-results.json
benchmarks/competitors/: python_cpu_baselines.py  requirements-quantlib.txt
crates/mc-bench/: Cargo.toml
crates/mc-bench/src/: harness.rs  lib.rs  main.rs  result.rs
crates/mc-bench/tests/: gates.rs  harness.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: lib.rs
crates/mc-core/src/backend/: cuda.rs  metal.rs  mod.rs
crates/mc-core/tests/: cpu_backend.rs  cpu_runtime.rs  gpu_backend_contract.rs  planner.rs
crates/mc-schema/: Cargo.toml
crates/mc-schema/src/: compat.rs  diagnostics.rs  lib.rs  schema.rs  validate.rs
crates/mc-schema/tests/: serialization.rs  validation.rs
docs/: agent-examples.json  agent-integration-plan.md  agent-tooling.md  benchmark-gates.md  benchmark-plan.md  competitive-benchmark-policy.md  current-assessment.md  flagship-competitiveness-plan.md  function-catalog.md  gpu-testing-strategy.md  product-model-capability-catalog.json  product-model-capability-catalog.md  simulation-techniques.md  user-friendliness-research.md
docs/site/: agent-tools.md  api-reference.md  index.md
python/mc_library/: __init__.py  agent.py  methods.py
python/tests/: test_agent_surface.py  test_python_surface.py
(+6 files in other folders)
