[package]
name = "mc-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda-native = ["mc-core/cuda-native"]
metal-native = ["mc-core/metal-native"]
native-gpu = ["cuda-native", "metal-native"]

[dependencies]
mc-core = { path = "../mc-core" }
mc-schema = { path = "../mc-schema" }
serde.workspace = true
serde_json.workspace = true
